--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
 <h1 class="header--main">Discover hidden places in the world around you</h1>
 <p><a class="link--cta" href="#">Download excursion (Coming Soon!)</a></p>
-<video autoplay loop>
+<video width="320" height="240" autoplay loop>
   <source src="resources/videos/excursion.mp4" type="video/mp4">
 </video>
+<h2 class="header--secondary">Your personal travel guide</h2>
+<h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
+<p><img class="img" src="resources/images/camp.jpg"></p>
+<p><img src="resources/images/phone.png"></p>
 </body>
 </html>
