--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <h2 class="header--secondary">Your personal travel guide</h2>
 <h4 class="header--sub-header">Excursion remembers places you like, and recommends new points of interest around you.</h4>
 <p><img class="img" src="resources/images/camp.jpg"></p>
-<p><img src="resources/images/phone.png"></p>
+<p><img class="tgh" src="resources/images/phone.png"></p>
+<h4 class="header--secondary">Coming Soon for iPhone and Android</h4>
+<p><a class="link--cta" href="#">Download excursion (Coming Soon!)</a></p>
+<p class="footer--copyright">© Excursion</p>
 </body>
 </html>
